--- a/src/components/Layout/Header/Header.module.css
+++ b/src/components/Layout/Header/Header.module.css
@@ -42,3 +42,19 @@
     right:100px;
     
 }
+
+@media only screen and (max-width: 540px) {
+    .img{
+        position:relative;
+        top:180px;
+        left:20px;
+
+    }
+
+    .btn{
+        position:relative;
+        top:5px;
+        left:160px;
+        
+    }
+}
